css/AllCSS.css
/* ... */
#ShowcaseBox {
	border: 3px solid black;
	background: #282828;
	width: 355px;
	padding: 10px;
}

#ShowcaseBox #Showcase {
	width: 327px;
	height: 184px;
	background: #1a1919;
	border: 2px solid #090909;
	margin: 0 auto; 
	display:block;
}

#ShowcaseBox #Carousel {
	border: 2px solid #090909;
	border-top: none;
	margin: 0 auto;
	width:fit-content;
	width:initial\9;
	height:42px;
	text-align: center;
	background: #171717;
	
}

#ShowcaseBox #Carousel img {
	display:inline;
	width:42px;
	height:42px;
}

#ShowcaseBox #Carousel img:hover,
#ShowcaseBox #Carousel img.selected {
	background: #444;
	cursor: pointer;
}

#NewUsersContainer {
	margin-top: -35px;
}

#NewUsersContainer h3 {
	margin-bottom: 0px;
	margin-left: 15px;
	width: 110px;
}

#NewUsersContainer #NewUsersBox {
	border: 2px solid #090909;
	margin: 0 auto;
	background: #171717;
	padding: 10px;
	padding-left: 15px;
	width: 100%;
	table-layout: fixed;
}



#NewUsersContainer #NewUsersBox .User {
	border: 2px solid #090909;
	background: #282828;
	width: 104px;
	display:inline-block;
	padding: 5px;
	text-align: center;
	margin-right: 5px;
	vertical-align: middle;
}

#NewUsersContainer #NewUsersBox .User img {
	width: 100px;
	border: 2px solid #090909;
	background: #1a1919;
}

#NewUsersContainer #NewUsersBox .User span {
	width: 100px;
	display: block;
	font-family: punk;
	font-weight: bold;
	word-break: break-all;
	margin: 0 auto;
	height: 28px;
}

#PopularGamesContainer h3 {
	margin-bottom: 0px;
	margin-left: 15px;
	width: 150px;
}

#PopularGamesContainer	#PopularGamesBox {
	border: 2px solid #090909;
	margin: 0 auto;
	background: #171717;
	padding: 10px;
	padding-left: 15px;
	width: 100%;
}

.PopularGame img {
	width: 300px;
	height: 169px;
	border: 2px solid #090909;
}

.PopularGame #Play {
	width: 212px;
	height: 54px;
	background: url(/images/btn_play_54h.png);
	display: inline-block;
}

.PopularGame #Play:hover {
	background-position: 0 54px;
}

.PopularGame #ShowcaseBigImages {
	display: table-cell;
	vertical-align: top;
	width:304px;
	text-align:center;
}

.PopularGame #ShowcaseBigImages img {
	background:	#282828
}

.PopularGame #ShowcaseDetails {
	display: table-cell;
	vertical-align: top;

	width: 282px;
	height: 225px;
}

.PopularGame #ShowcaseDetails #NameAndCreator {
	margin-left: 0px;
	margin-top: 0px;
	font-size:15px;
	width: 270px;
	background: black;
	font-family: punk;
	font-weight: bold;
	padding: 5px;
	padding-left: 15px;
	padding-top: 10px;
}

.PopularGame #ShowcaseDetails #NameAndCreator a {
	display: block;
	color: white;
}

.PopularGame #ShowcaseDetails #NameAndCreator #Creator {
	font-size: 11px;
}

.PopularGame #ShowcaseDetails code {
	border: 2px solid black;
	padding: 10px;
	background: #282828;
	height: 175px;
	display: block;
	width: 266px;
}

#PopularGames {
	text-align: center;margin-left: 10px;height: 195px;overflow: hidden;
	background: #0f0f0f;
	
}

#PopularGames img {
	width: 227px;height: 128px;
}

#GamesContainer {
	background: #222;
	padding: 10px;
	border: 2px solid black;
}

#GamesContainer #GamesFilterPanel {
	float: left;
	border: 2px solid black;
	background: #1a1a1a;
	width: 175px;
}

#GamesContainer #GamesFilterPanel h4 {
	margin: 0;
	width: 100%;
	padding: 10px 0px;
	text-align: center;
}

#GamesContainer #GamesFilterPanel ul {
	list-style: none;
	text-align: center;
	padding: 0;
}

#GamesContainer #GamesFilterPanel li > a{
	padding: 8px 6px;
	display: block;
	border: 2px solid black;
	margin: 5px;
	background: #111;
}

#GamesContainer #Games {
	float: left;
	border: 2px solid black;
	padding: 5px;
	background: #1a1a1a;

	width: 666px;
	margin-left: 7px;
}

#GamesContainer #Games .Game {
	display: inline-block;
	padding: 10px;
	border: 2px solid black;
	width: 194px;
	background: #111;
	margin: 2px;
}

#GamesContainer #Games .Game:hover {
	cursor: pointer;
}

#GamesContainer #Games .Game:hover #Info > a {
	cursor: pointer;
	text-decoration: underline;
	color: #ffc63f;
}

#GamesContainer #Games .Game #ImageContainer {
	position:relative;
	width: 189px;
	height: 108px;
}

#GamesContainer #Games .Game #ImageContainer > img {
	border: 2px solid black;
	position:absolute;
}

#GamesContainer #Games .Game #ImageContainer #FavouritesArea {
	border: 1px solid black;
	background: #222;
	position:absolute;
	z-index: 2;
	padding: 2px 5px;
}

#GamesContainer #Games .Game #Info > span,
#GamesContainer #Games .Game #Info > a {
	display:block;
}

#GamesContainer #Games .Game #Info > span {
	color: lightgray;
}

#NumberPutter {
	width: 40px;
	border: 2px solid black;
	background: #242424;
	color: white;
	text-align: center;
}

#Paginator {
	margin: 4px auto;
	margin-bottom: 0px;
	text-align: center;
}

.Game[template] {
	display:none;
}

